--- a/pom.xml
+++ b/pom.xml
@@ -64,4 +64,21 @@
 			<version>2.0.1.Final</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.17</version>
+				<configuration>
+					<test>TestCases.java</test>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
